Fixed text overflow issue in all projects page
Former-commit-id: cb1666a167a2bc72742c64c76f56c936d6fee846

--- a/public/stylesheets/sass/nlcommons.scss
+++ b/public/stylesheets/sass/nlcommons.scss
@@ -889,6 +889,10 @@ table.simple_table {
     ul {
       padding: 0px;
       li {
+        width: 160px;
+        overflow:hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
         &:before {
           content: "-";
           margin: 0px 3px;
